--- a/views/templete.hbs
+++ b/views/templete.hbs
@@ -52,7 +52,7 @@
         }
         .greeting
         {
-            font-family:cambria;
+            font-family:Montserrat;
             font-weight:bolder;
             margin-left:15px;
             font-size:23px;
@@ -86,23 +86,7 @@
             margin-left:18px;
             border-radius:5px;
         }
-         .title_img{
-            width:200px;
-            height:200px;
-            overflow:hidden;
-            padding:0px;
-            display: block;
-            margin-left: auto;
-            margin-right: auto;
-            margin-top: 0px;
-            margin-bottom: 0px;
-        }
-        .title_img img
-        {
-            width: 100%;
-            height:100%;
-            padding: 0px;
-        }
+        
     </style>
 
 </head>
@@ -111,7 +95,7 @@
     {{#if_equal task 'Password Reset'}}
    
     <div class="wrapper col-6">
-    <h5 class="intro"> Futsal Arena </h5>
+    <h5 class="intro"> Covid tracker nepal </h5>
     <div class="contents">
         <h5 class="headings"> {{ heading }} </h5>
         <h6 class="greeting"> {{ greeting }} </h6>
@@ -120,7 +104,7 @@
             <p style="font-size:20px; margin-top:4px; margin-left:11px; font-weight:bolder;"> {{ code }} </p>
         </div>
         <p class="info"> {{ message2 }} </p>
-        <p style="text-align:center; font-weight:bolder;"> -Futsal Arena </p>
+        <p style="text-align:center; font-weight:bolder;"> -Covid Nepal </p>
     </div>
 
 
